[tool.poetry]
name = "ims-form-tg"
version = "0.1.0"
description = ""
authors = ["a.pushkin <a.v.pushkin@gmail.com>"]
readme = "README.md"
packages = [{include = "ims_form_tg"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
